# pysits

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
conda/: meta.yaml
examples/: apply.py  classification.py  collections.py  copy.py  predictors.py  rds.py  regularization.py  segmentation.py
pysits/: __init__.py  factory.py  settings.py  types.py  variables.py
pysits/backend/: __init__.py  data.py  functions.py  leaflet.py  pkgs.py  sits.py  tibble.py  utils.py
pysits/conversions/: base.py  clojure.py  common.py  decorators.py  dsl.py  matrix.py  pandasr.py  tibble.py  tibble_arrow.py  vector.py  xarray.py
pysits/conversions/dsl/: mask.py
pysits/docs/: decorators.py
pysits/docs/content/: sits_get_data.md
pysits/extras/: __init__.py  earthdatalogin.py  torch.py
pysits/models/: __init__.py  base.py  builder.py  cube.py  data.py  frame.py  ml.py  resolver.py  ts.py
pysits/models/data/: __init__.py  cube.py  frame.py  ts.py
pysits/operations/: apply.py  classification.py  cube.py  data.py  ml.py  segment.py  ts.py
pysits/plot/: tmap.py  toolbox.py
pysits/sits/: __init__.py  apply.py  classification.py  colors.py  config.py  context.py  cube.py  data.py  impute.py  ml.py  segment.py  tiles.py  ts.py  utils.py  visualization.py
pysits/sits/exporters/: __init__.py  files.py  polars.py  sf.py  xarray.py
pysits/templates/: cube.html
pysits/toolbox/conversions/: base.py  tibble.py
pysits/toolbox/visualization/: __init__.py  base.py  image.py  tmap.py
pysits/visualization/: __init__.py  base.py  tmap.py
sitsflow/: __init__.py  factory.py  types.py
sitsflow/backend/: __init__.py  utils.py
sitsflow/models/: __init__.py  base.py  cube.py  ml.py  ts.py
sitsflow/operations/: __init__.py  apply.py  classification.py  cube.py  data.py  ml.py  segment.py  ts.py
sitsflow/plot/: __init__.py  base.py  tmap.py
tests/: conftest.py  test_classification.py  test_conversions.py  test_cube.py  test_data.py  test_dsl.py  test_geopandas.py  test_models.py  test_tiles.py  test_utils.py  test_validation.py  test_visualization.py  test_xarray.py
