[project]
name = "pysits"
version = "0.0.1"
description = "Python wrapper for the sits R package"
authors = [
    {name = "Gilberto Camara",email = "gilberto.camara.inpe@gmail.com"},
    {name = "Felipe Carlos",email = "efelipecarlos@gmail.com"},
    {name = "Felipe Carvalho",email = "lipecaso@gmail.com"},
    {name = "Pedro Brito",email = "pedro_brito1997@hotmail.com"},
    {name = "Rolf Simoes",email = "rolfsimoes@gmail.com"},
]
readme = "README.md"
packages = [{include = "pysits"}]
requires-python = ">=3.10,<4"

[tool.poetry.dependencies]
python = ">=3.10,<4"

rpy2 = ">=3.5.17,<4.0.0"
pandas = "^2.2.3"

pillow = "^11.1.0"
matplotlib = "^3.10.1"

#
# xarray-related dependencies
#
[tool.poetry.group.xarray]
optional = true

[tool.poetry.group.xarray.dependencies]
xarray = "^2025.3.0"
dask = "^2025.3.0"
rioxarray = "^0.18.2"
affine = "^2.4.0"

#
# Development-related dependencies
#
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
pre-commit = "^3.6.0"
pytest = "^7.4.4"

#
# Configurations
#

# Ruff
[tool.ruff]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "N",   # pep8 naming
    "PL",  # pylint
]

[tool.ruff.lint.pylint]
max-args = 10

# Build
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
