#
# Copyright (C) 2025 sits developers.
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <https://www.gnu.org/licenses/>.
#

[project]
name = "pysits"
version = "0.0.1"
description = "Python wrapper for the sits R package"
readme = "README.md"
requires-python = ">=3.10,<4"
license = {text = "GPL-2.0-only"}

authors = [
    {name = "Felipe Carlos", email = "efelipecarlos@gmail.com"},
    {name = "Felipe Carvalho", email = "lipecaso@gmail.com"},
    {name = "Pedro Brito", email = "pedro_brito1997@hotmail.com"},
    {name = "Rolf Simoes", email = "rolfsimoes@gmail.com"},
    {name = "Gilberto Camara", email = "gilberto.camara.inpe@gmail.com"}
]

dependencies = [
    "rpy2>=3.5.17,<4.0.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "matplotlib>=3.10.1"
]

[project.urls]
"Homepage" = "https://github.com/e-sensing/pysits"
"Issue Tracker" = "https://github.com/e-sensing/pysits/issues"

[project.optional-dependencies]
xarray = [
    "xarray>=2025.3.0",
    "dask>=2025.3.0",
    "rioxarray>=0.18.2",
    "affine>=2.4.0"
]

dev = [
    "ruff>=0.11.12",
    "pre-commit>=3.6.0",
    "pytest>=7.4.4"
]

[tool.ruff]
exclude = ["examples", "_resources"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "N",   # pep8 naming
    "PL",  # pylint
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.hatch.metadata]
packages = ["pysits"]

[tool.hatch.build.targets.wheel]
include = [
  "pysits/**.py",
  "pysits/docs/**.md",
  "README.md",
  "LICENSE"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
